--- a/package.json
+++ b/package.json
@@ -4,20 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "test": "node tests/run_tests.js",
+    "start": "nodemon app.js",
+    "migrate": "node-pg-migrate up",
+    "migrate:down": "node-pg-migrate down",
+    "migrate:create": "node-pg-migrate create"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.2",
-    "express": "^4.18.1",
+    "express": "^4.19.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.19"
+    "node-fetch": "^2.7.0",
+    "pg": "^8.11.3",
+    "pusher": "^5.2.0",
+    "twilio": "^4.22.0",
+    "ws": "^8.18.2"
+  },
+  "devDependencies": {
+    "node-pg-migrate": "^6.2.2",
+    "nodemon": "^3.1.0"
   }
 }
