--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node tests/run_tests.js",
-     "start": "node index.js",
+    "start": "node index.js",
     "server": "nodemon index.js",
     "migrate": "node-pg-migrate up",
     "migrate:down": "node-pg-migrate down",
@@ -15,11 +15,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
