--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "@sentry/node": "^10.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -23,9 +24,10 @@
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
     "hbs": "^4.2.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "pusher": "^5.2.0",
     "twilio": "^4.22.0",
