add support for stripe subscriptions

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "pusher": "^5.2.0",
+    "stripe": "^19.0.0",
     "twilio": "^4.22.0",
     "ws": "^8.18.2"
   },
