--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,14 @@
         "src": "/(.*)",
         "dest": "/"
       }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT,HEAD" },
+        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version, Authorization, X-Stream-Epoch, Origin" }
+      ]
+    }
   ]
 }
