--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "pg": "^8.11.3",
     "pusher": "^5.2.0",
     "stripe": "^19.0.0",
+    "technicalindicators": "^3.1.0",
     "twilio": "^4.22.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
+    "abort-controller": "^3.0.0",
     "node-pg-migrate": "^6.2.2",
     "nodemon": "^3.1.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
