--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.19.2",
     "hbs": "^4.2.0",
     "jsonwebtoken": "^9.0.2",
+    "moment-timezone": "^0.6.0",
     "mysql": "^2.18.1",
     "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.13",
