--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,9 @@
 [build]
 builder = "nixpacks"
 
+[build.env]
+NIXPACKS_NODE_VERSION = "20"
+
 [deploy]
 startCommand = "node index.js"
 healthcheckPath = "/health"
