--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nodejs-form",
+  "name": "precision-trader-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": ">=19.0.0"
+    "node": ">=21.5.0"
   },
   "scripts": {
     "test": "node tests/run_tests.js",
@@ -32,7 +32,6 @@
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.6.0",
     "mysql": "^2.18.1",
-    "node-fetch": "^2.7.0",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "pusher": "^5.2.0",
