--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "stripe": "^19.0.0",
     "technicalindicators": "^3.1.0",
     "twilio": "^4.22.0",
+    "undici": "^6.21.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
