--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.6.0",
     "mysql": "^2.18.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
     "pg": "^8.11.3",
     "pusher": "^5.2.0",
